--- a/index.ipynb
+++ b/index.ipynb
@@ -47,11 +47,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# connect database and create cursor here"
+    "import sqlite3 \n",
+    "connection = sqlite3.connect('pets_database.db')\n",
+    "cursor = connection.cursor()# connect database and create cursor here"
    ]
   },
   {
@@ -72,10 +74,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OperationalError",
+     "evalue": "table cats already exists",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-e9f0358f6dd4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mage\u001b[0m \u001b[0mINTEGER\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mbreed\u001b[0m \u001b[0mTEXT\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m );''') \n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;31m# create table here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mOperationalError\u001b[0m: table cats already exists"
+     ]
+    }
+   ],
    "source": [
+    "cursor.execute('''CREATE TABLE cats (\n",
+    "    id INTEGER PRIMARY KEY,\n",
+    "    name TEXT,\n",
+    "    age INTEGER,\n",
+    "    breed TEXT\n",
+    ");''') \n",
     "# create table here"
    ]
   },
@@ -101,11 +121,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7fce6d8a83b0>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# insert Maru into the pet_database.db here"
+    "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES ('Maru', 3, 'Scottish Fold');''')# insert Maru into the pet_database.db here"
    ]
   },
   {
@@ -135,11 +166,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# execute the INSERT INTO statements here"
+    "file = open(\"./01_insert_cats_into_cats_table.sql\", 'r')\n",
+    "sql = file.read() # opens the SQL file\n",
+    " # reads and returns the SQL statements\n",
+    "cursor = connection.cursor()\n",
+    "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES (\"Lil\\' Bub\", 5, \"American Shorthair\")'''); # executes the returned SQL statements and inserts the values into the table\n",
+    "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES (\"Hannah\", 1, \"Tabby\")''');\n",
+    "file.close() # closes the file# execute the INSERT INTO statements here"
    ]
   },
   {
@@ -223,10 +260,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'Maru', 3, 'Scottish Fold'),\n",
+       " (2, \"Lil' Bub\", 5, 'American Shorthair'),\n",
+       " (3, 'Hannah', 1, 'Tabby')]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "cursor.execute('''SELECT * FROM cats;''').fetchall()\n",
     "# select cats from database here"
    ]
   },
@@ -263,11 +314,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(3, 'Hannah', 1, 'Tabby')]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# select using WHERE clause here"
+    "cursor.execute('''SELECT * FROM cats WHERE age < 2;''').fetchall()# select using WHERE clause here"
    ]
   },
   {
@@ -299,11 +361,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# update hannah here"
+    "cursor.execute('''UPDATE cats SET name = \"Hana\" WHERE name = \"Hannah\";''').fetchall()# update hannah here"
    ]
   },
   {
@@ -331,11 +404,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7fce657b05e0>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# DELETE record with id=2 here"
+    "cursor.execute('''DELETE FROM cats WHERE id = 2;''')# DELETE record with id=2 here"
    ]
   },
   {
@@ -374,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
